--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -14,7 +14,30 @@
     border-radius: 1rem;
 
     color: #fff;
-    
+    @media (max-width: 1327px) {
+      padding: 10.5rem 3.7rem 7.7rem;
+      @media (max-width: 600px) {
+        flex-wrap: wrap;
+      }
+      @media (max-width: 400px) {
+        border-radius: 0.5rem;
+        gap: 4rem;
+      }
+    }
+
+  @media (max-width: 1150px) {
+    padding: 4.5rem 3.7rem 4.5rem;
+  }
+
+@media (max-width: 958px) {
+  display: flex;
+}
+
+@media (max-width: 800px) {
+  padding: 2.5rem 1.7rem;
+}
+
+
   }
 
   &__graphic-column {
@@ -24,7 +47,15 @@
   &__title {
     max-width: 64.1rem;
     margin-bottom: 6rem;
+    font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
+    @media (max-width: 958px) {
+      margin-bottom: 3rem;
   }
+  @media (max-width: 400px) {
+    margin-bottom: 1.9rem;
+}
+  }
+
 
   &__graphic {
     width: 100%;
@@ -36,11 +67,17 @@
     grid-column: span 4;
     display: flex;
     flex-direction: column;
+    @media (max-width: 958px) {
+      grid-column: span 7;
+  }
   }
 
   &__tabs {
     display: flex;
     margin-bottom: 5.5rem ;
+    @media (max-width: 958px) {
+      display: none;
+  }
   }
 
   &__tab-wrapper {
@@ -53,20 +90,10 @@
     padding-top: 2.3rem;
 
     cursor: pointer;
-
-    &.active {
-      .configure__tab-text {
-        color: #fff;
-      }
-
-      .configure__tab-upperline {
-        top: 0;
-
-        height: 0.3rem;
-
-        background-color: #fff;
-      }
+    @media (max-width: 400px) {
+      padding-top: 1rem;
     }
+
   }
 
   &__tab-upperline {
@@ -81,12 +108,42 @@
 
     transition: 0.2s;
   }
+  &__tab-upperline-hidden {
+    position: absolute;
+    top: 0.1rem;
+    left: 0;
+
+    width: 100%;
+    height: 0.1rem;
+
+    background-color: rgba(255, 255, 255, 0.5);
+
+    transition: 0.2s;
+  }
+
+  .configure__tab-upperline.tab-content_show {
+    top: 0;
+
+    height: 0.3rem;
+
+    background-color: #fff;
+  }
+  .configure__tab-upperline-hidden.tab-content_show {
+    top: 0;
+
+    height: 0.3rem;
+
+    background-color: #fff;
+  }
 
   &__tab-text {
     font: var(--body-XX);
     color: rgba(255, 255, 255, 0.5);
 
     transition: 0.2s;
+  }
+  .configure__tab-text.tab-header_show {
+    color: #fff;
   }
 
   &__form {
@@ -95,12 +152,20 @@
     justify-content: space-between;
     gap: 2rem;
     flex-grow: 1;
+    display: none;
+  }
+
+  &__form.tab-content_show {
+    display: flex;
   }
 
   &__form-fields {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    @media (max-width: 400px) {
+      gap: 0.5rem;
+    }
   }
 
   &__form-group {
@@ -109,6 +174,9 @@
 
     border: 1px solid #fff;
     border-radius: 1rem;
+    @media (max-width: 400px) {
+      border-radius: 0.7rem;
+    }
   }
 
   &__form-group-header {
@@ -117,10 +185,16 @@
     align-items: center;
     gap: 1.5rem;
     padding: 1.5rem 1.5rem 1.5rem 2rem;
+    @media (max-width: 400px) {
+      padding: 0.6rem 1rem 0.6rem 1.5rem;
+    }
   }
 
   &__form-group-title {
     font: var(--body-XL);
+    @media (max-width: 1150px) {
+      font-size: 2rem;
+  }
   }
 
   &__form-group-button {
@@ -162,6 +236,11 @@
     flex-wrap: wrap;
     gap: 0.8rem;
     padding: 1.5rem;
+    justify-content: space-between;
+    @media (max-width: 400px) {
+      padding: 0.5rem;
+    }
+   
   }
 
   &__chosen-equipment {
@@ -176,6 +255,9 @@
 
   &__chosen-equipment-text {
     font: var(--body-S-bold);
+    @media (max-width: 400px) {
+      font-size: 1.2rem;
+  }
   }
 
   &__chosen-equipment-delete {
@@ -197,6 +279,13 @@
     
     font: var(--body-S-bold);
     color: var(--accent-primary);
+    
+  }
+
+  .configure__chosen-equipment-more {
+    @media (max-width: 400px) {
+      font-size: 1.2rem;
+  }
   }
 
   &__form-price-block {
@@ -211,6 +300,9 @@
     justify-content: space-between;
     align-items: center;
     gap: 2rem;
+    @media (max-width: 992px) {
+      flex-wrap: wrap;
+  }
   }
 
   &__form-price-description {
@@ -220,11 +312,20 @@
     font: var(--body-S);
 
     opacity: 0.4;
+    @media (max-width: 400px) {
+      font-size: 1.2rem;
+  }
   }
 
   &__form-price {
     font: var(--title-S-narrow);
     padding-right: 9px;
+    @media (max-width: 1150px) {
+      font-size: 3rem;
+  }
+  @media (max-width: 400px) {
+    font-size: 2.5rem;
+}
   }
 
   &__form-button {
@@ -232,10 +333,56 @@
     justify-content: space-between;
     align-items: center;
     padding: 2rem 2.5rem;
+    @media (max-width: 400px) {
+      font-size: 2rem;
+      padding: 1rem 2.5rem;
+    }
 
     svg {
       width: 4rem;
       height: 4rem;
+      @media (max-width: 400px) {
+        width: 3rem;
+      }
     }
   }
+
+  &__graphic {
+    display: none;
+  }
+
+  &__graphic.tab-content_show {
+    display: block;
+  }
+
+  
+  }
+  .configure__tabs-hidden{
+    display: none;
+    @media (max-width: 958px) {
+      display: flex;
+      padding-bottom: 2rem;
+     
+  }
+
+  .configure__tab-text-hidden {
+    font: var(--body-XX);
+    color: rgba(255, 255, 255, 0.5);
+    transition: 0.2s;
+    @media (max-width: 400px) {
+      font-size: 2rem;
+    }
+  }
+
+  .configure__tab-text-hidden.tab-header_show {
+    color: rgba(255, 255, 255, 1);
+  }
+}
+
+.configure__chosen-equipments li:last-of-type {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  color: #1B74E3;
+  padding: 1rem 1.5rem;
+  display: flex;
 }
