--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,25 +4,28 @@
 @import './global/mixins';
 @import './global/global';
 @import './global/layout';
-
-@import "./components/billet";
-@import "./components/play-button";
-
+@import './components/billet';
+@import './components/play-button';
 @import './components/header';
 @import './components/footer';
 @import './components/modal';
-@import "./components/logo";
-@import "./components/intro";
-@import "./components/intro-slider";
-@import "./components/menu-burger";
-@import "./components/socials";
-@import "./components/stats";
-@import "./components/features";
-@import "./components/overview";
-@import "./components/configure-poster";
-@import "./components/configure";
-@import "./components/expert";
-@import "./components/why";
-@import "./components/callback";
-@import "./components/map";
-@import "./components/gallery";
+@import './components/logo';
+@import './components/intro';
+@import './components/intro-slider';
+@import './components/menu-burger';
+@import './components/socials';
+@import './components/stats';
+@import './components/features';
+@import './components/overview';
+@import './components/configure-poster';
+@import './components/configure';
+@import './components/expert';
+@import './components/why';
+@import './components/callback';
+@import './components/map';
+@import './components/gallery';
+@import './components/all';
+@import './components/characters';
+@import './components/order';
+@import './components/reviews';
+@import './components/plants';
