--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1866,6 +1866,118 @@
     </div>
     </div>
 </section>
+<section class="reviews">
+    <div class="wide-container">
+        <div class="reviews__inner">
+          
+            <h2>Отзывы клиентов</h2>
+            <div class="swiper__nav">
+            <button class="swiper-button-prev">
+            </button>
+            <button class="swiper-button-next">
+          
+                </button>
+            </div>
+            <div class="reviews__inner-slider swiper">
+            <div class="reviews__inner_items swiper-wrapper">
+                <div class="reviews__inner_item swiper-slide autoheight">
+                    <a class="reviews__inner_item_video" id="">
+                        <picture>
+                            <source srcset="./img/billet.jpg" type="image/webp">
+                            <img class="video__media" alt=" —  / " data-ll-status="loaded" src="">
+                        </picture>
+                    </a>
+                    <div class="reviews__inner_item-title">Отличная модель для российских условий</div>
+                    <p>Менеджер компании погрузился в суть вопроса и подобрал нам идеальную конфигурацию! Сотрудники компании высоко-квалифицированны и полностью оправдывают ожидания.</p>
+                    <strong>Алишер Нуриев</strong>
+                    <span>Директор «Слобода арена», пос. Рыбная слобода</span>
+                </div>
+                <div class="reviews__inner_item swiper-slide autoheight">
+                 
+                      <img src="./img/1.png"class="reviews__inner_item-img" alt="">
+                
+                    <div class="reviews__inner_item-title">Идеальна для заливки арены хоккея с мячом</div>
+                    <p>Менеджер компании погрузился и подобрал лучшую конфигурацию, которая актуальна не толкьо в зимний период, но и летом. Огромная благодарность за столь уникальную модель!</p>
+                    <strong>Олег Петров</strong>
+                    <span>Директор «Арена спорта»,
+                        г. Казань</span>
+                </div>
+                <div class="reviews__inner_item swiper-slide autoheight">
+                   <img src="./img/cover.png"class="reviews__inner_item-img" alt="">
+                  
+                    <div class="reviews__inner_item-title">Очень вместительная и производительная модель!</div>
+                    <p>Подбирали модель для заливки на открытых катках, к нашему удивлению эта машина способна обрабатывать по 30 катков в день. Думаю это не предел, будем бить рекорды!</p>
+                    <strong>Давид Нургалиев</strong>
+                    <span>Директор «Ледовый дворец», г. Набережные Челны</span>
+                </div>
+                <div class="reviews__inner_item swiper-slide autoheight">
+                    <a class="reviews__inner_item_video" id="">
+                        <picture>
+                            <source srcset="./img/3.png" type="image/webp">
+                            <img class="video__media" alt=" —  / " data-ll-status="loaded" src="">
+                        </picture>
+                    </a>
+                    <div class="reviews__inner_item-title">Отличная модель для российских условий</div>
+                    <p>Менеджер компании погрузился в суть вопроса и подобрал нам идеальную конфигурацию! Сотрудники компании высоко-квалифицированны и полностью оправдывают ожидания.</p>
+                    <strong>Алишер Нуриев</strong>
+                    <span>Директор «Слобода арена», пос. Рыбная слобода</span>
+                </div>
+            </div>
+          <div class="swiper-pagination"></div>
+        </div>  
+        </div>
+    </div>
+</section>
+<section class="order">
+    <div class="wide-container">
+        <div class="order__inner">
+    
+            <div class="order__inner-main">
+                <div class="order__inner-main-left">
+                    <p>Уникальная акция<br> до 25 февраля 2022</p>
+                    <div class="order__inner-main-inner">
+                <span class="order__inner-main-text">
+                    Оставляйте заявку на любую комлпектацию модели через сайт или по номеру телефона
+                </span>
+                <button class="order__inner-main-btn">Быстрая заявка
+                    <div class="order__inner-main-icon"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35 26.6751V8.33341C35 7.41341 34.2533 6.66675 33.3333 6.66675H6.66667C5.74667 6.66675 5 7.41341 5 8.33341V33.3334L14.8483 28.4334L33.3417 28.3417C34.2583 28.3367 35 27.5917 35 26.6751Z" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.666 12.7058H27.666" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.666 21.906H22.866" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.666 17.3059H22.866" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                  </div>
+                </button></div></div>
+                <div class="order__inner-content">
+                    <h2>Заказывай УМку и получай подарки на выбор</h2>
+                <div class="order__inner-main-items">
+                    <div class="order__inner-main-item">
+                        <span class="order__inner-num">01</span>
+                        <p class="order__inner-main-item--text">
+                            Минимойка Karcher<br> K 2 Power Control
+                        </p>
+                    </div>
+                    <div class="order__inner-main-item">
+                        <span class="order__inner-num">02</span>
+                        <p class="order__inner-main-item--text">
+                            Дизельная тепловая пушка
+                            Gigant DHG 30 D2
+                        </p>
+                    </div>
+                    <div class="order__inner-main-item">
+                        <span class="order__inner-num">03</span>
+                        <p class="order__inner-main-item--text">
+                            набор инструментов на 151 предмет
+                        </p>
+                    </div>
+                </div>
+             </div>
+            </div>
+           
+        </div>
+    </div>
+
+</section>
 
 <section class="all">
     <div class="wide-container">
@@ -2057,6 +2169,62 @@
             </div>
         </div>
     </div>
+</section>
+<section class="plant">
+    
+    <div class="plant__wrapper">
+        <div class="wide-container">
+        <div class="plant__title">
+            <div class="plant__title_inner"> <strong>Производитель умки</strong>
+            <img src="./img/logo_lip.png" alt="">
+        </div>             
+            <h2>Липецкий Завод Малых Коммунальных Машин</h2>
+           
+        </div>
+        <div class="plant__inner">
+            <div class="plant__inner_slider-main">
+                <p>Машиностроительное предприятие выпускает уникальные многофункциональные комбинированные машины на автомобильном шасси малого размера.</p>
+            <div class="plant__inner_slider swiper">
+                <div class="swiper-wrapper">
+                       <img class="swiper-slide " src="./img/sl_lip.png" alt="">
+                       <a href="" class="swiper-slide"> <img class="" src="./img/sl_lip2.png" alt=""></a>
+                </div>  
+         
+     
+                           
+            </div>
+            </div>
+            <div class="plant__inner_slider-thanks">
+                <div class="plant__inner_slider-thanks-text">
+                    <div class="plant__inner_info">
+                        <strong>25 лет</strong>
+                        <p>завод производит модели спецтехники</p>
+                    </div>
+                    <div class="plant__inner_info">
+                        <strong>65 регионов</strong>
+                        <p>активно используют технику Липецкого завода</p>
+                    </div>
+               
+               
+                <div class="plant__inner_thanks swiper">
+                    <div class="swiper-wrapper">
+                    <img class="swiper-slide" src="./img/th.png" alt="">
+                    <img class="swiper-slide" src="./img/th.png" alt="">
+                    <img class="swiper-slide" src="./img/th.png" alt="">
+                </div>
+                </div>
+                <button>посетить завод
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.19625 20.7785C4.93458 20.2935 4.93458 19.7052 5.19625 19.2202C8.34958 13.3885 14.1746 8.3335 19.9996 8.3335C25.8246 8.3335 31.6496 13.3885 34.8029 19.2218C35.0646 19.7068 35.0646 20.2952 34.8029 20.7802C31.6496 26.6118 25.8246 31.6668 19.9996 31.6668C14.1746 31.6668 8.34958 26.6118 5.19625 20.7785Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M23.5355 16.4645C25.4881 18.4171 25.4881 21.5829 23.5355 23.5355C21.5829 25.4881 18.4171 25.4881 16.4645 23.5355C14.5118 21.5829 14.5118 18.4171 16.4645 16.4645C18.4171 14.5118 21.5829 14.5118 23.5355 16.4645" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        
+                </button>
+            </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 <section class="callback">
     <div class="wide-container">
