change after review

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -21,7 +21,7 @@
                             <use xlink:href="#time-icon"></use>
                         </svg>
                         <span class="intro__button-bottom-text">предложение ограничено</span>
-                        <span class="intro__button-bottom-timer">18:25:15</span>
+                        <span class="intro__button-bottom-timer" data-date=22/04/20><div id="hours"></div>:<div id="minutes"></div>:<div id="seconds"></div></span>
                         <svg class="intro__button-bottom-bg">
                             <use xlink:href="#timer-bg"></use>
                         </svg>
@@ -753,7 +753,7 @@
                 </div>
                 <div class="gallery__wrapper-item gallery__wrapper-item--link ">
                     <a href="">
-                        <img src="./img/img7.webp" alt="" />
+                        <img src="./img/img7.png" alt="" />
                         <div class="gallery__wrapper-item-text">
                             <p>Перейти в медиагалерею</p>
                             <span>Более 30 фото<br>и видео материалов</sp>
@@ -1878,7 +1878,6 @@
             </div>
         </div>
     </div>
-    </div>
 </section>
 <section class="reviews">
     <div class="wide-container">
@@ -2206,7 +2205,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </section>
 <section class="plant">
     
