--- a/src/scss/components/order.scss
+++ b/src/scss/components/order.scss
@@ -4,7 +4,7 @@
 .wide-container {
 }
 .order__inner {
-    background-image: url(../img/block_7.jpg);
+    background-image: url(/../img/block_7.jpg);
     padding: 9rem 9.8rem;
     padding: calc(25px + (90 - 25) * (100vw - 360px) / (1680 - 360)) calc(20px + (98 - 20) * (100vw - 360px) / (1680 - 360));
     border-radius: 10px;
