--- a/src/scss/components/why.scss
+++ b/src/scss/components/why.scss
@@ -64,6 +64,10 @@
     &__item {
         display: flex;
         gap: 2.5rem;
+        width: 32%;
+        @media (max-width: 1279px) {
+            width: unset;
+        }
     }
 
     &__item__svg {
@@ -89,13 +93,13 @@
         display: flex;
         justify-content: flex-end;
         flex-wrap: wrap;
-        row-gap: 7rem;
+        row-gap: calc(27px + (72 - 27) * (100vw - 360px) / (1680 - 360));
         padding-top: 7.8rem;
-        column-gap: 4rem;
+        column-gap: 2rem;
         margin-right: 1.5rem;
         @media (max-width: 1580px) {
             margin-right: 0;
-            justify-content: flex-start;
+            // justify-content: flex-start;
         }
         @media (max-width: 790px) {
             justify-content: center;
