--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -284,7 +284,8 @@
                                 </li>
                                 <li class="configure__chosen-equipment-wrapper">
                                     <button class="configure__chosen-equipment-more">
-                                        еще 3
+                                        еще 
+                                        <span class="configure__chosen-equipment-counter"> 3</span>
                                     </button>
                                 </li>
                             </ul>
