--- a/css/styles.css
+++ b/css/styles.css
@@ -5881,7 +5881,7 @@ body:not(.loaded) .modal {
 }
 
 .order__inner {
-  background-image: url(/../img/block_7.jpg);
+  background-image: url(../img/block_7.jpg);
   padding: 9rem 9.8rem;
   padding: calc(25px + 65 * (100vw - 360px) / 1320) calc(20px + 78 * (100vw - 360px) / 1320);
   border-radius: 10px;
