--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -170,9 +170,115 @@
         padding: 0;
         border: 1px solid #fff;
         border-radius: 1rem;
+        position: relative;
+        transition: 0.3s ease-in-out;
+
         @media (max-width: 400px) {
             border-radius: 0.7rem;
         }
+    }
+
+    &__form-group.active {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        transition: 0.3s ease-in-out;
+    }
+
+    &__form-group.active &__form-group-body {
+        opacity: 1;
+        pointer-events: all;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    &__form-group-body {
+        position: absolute;
+        width: calc(100% + 2px);
+        left: -1px;
+        border: 1px solid #fff;
+        max-height: 208px;
+        background: #fff;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+        opacity: 0;
+        pointer-events: none;
+        overflow-y: scroll;
+        z-index: 10;
+        transition: opacity 0.3s ease-in-out;
+
+        &::-webkit-scrollbar,
+        &::-webkit-scrollbar-thumb {
+          width: 24px;
+          border-radius: 20px;
+          opacity: 0.5;
+          background-clip: padding-box;
+          border: 10px solid transparent;
+        }
+        
+        &::-webkit-scrollbar-thumb {        
+            box-shadow: inset 0 0 0 10px var(--main-secondary);
+        }
+
+        &.additionalOptions {
+            max-height: 130px;
+        }
+    }
+
+    &__form-group-list {
+        padding-top: 25px;
+        padding-left: 20px;
+        padding-bottom: 25px;
+    }
+
+    &__form-group-item {
+        position: relative;
+        display: flex;
+        margin-top: 22px;
+
+        &:first-child {
+            margin-top: 0;
+        }
+    }
+
+    &__form-checkbox {
+        position: relative;
+        z-index: 20;
+        width: 20px;
+        height: 20px;
+        flex-shrink: 0;
+        opacity: 0;
+    }
+
+    &__form-checkboxCustom {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top: 0;
+        left: 0;
+        border: 1px solid var(--accent-primary);
+        border-radius: 7px;
+        transition: 0.2s ease-in-out;
+
+        svg {
+            width: 11px;
+            height: 10px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    &__form-checkbox:checked ~ &__form-checkboxCustom {
+        transition: 0.2s ease-in-out;
+        background: var(--accent-primary);
+    }
+
+    &__form-text {
+        cursor: pointer;
+        padding-left: 16px;
+        font: var(--body-XL);
+        color: var(--accent-primary);
+        font-size: 20px;
     }
 
     &__form-group-header {
@@ -209,6 +315,14 @@
         svg {
             width: 2rem;
             height: 2rem;
+            transition: transform 0.2s ease-in-out;
+        }
+    }
+
+    &__form-group.active &__form-group-button {
+        svg {
+            transform: rotate(45deg);
+            transition: transform 0.2s ease-in-out;
         }
     }
 
